--- a/app/Resources/SonataAdminBundle/views/layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-
+    <link rel="icon" type="image/x-icon" href="{{ asset('uploads/logo/favicon.png') }}">
     <link rel="stylesheet" href="{{ asset('bundles/sonataformatter/markitup/skins/sonata/style.css') }}" type="text/css" media="all" />
     <link rel="stylesheet" href="{{ asset('bundles/sonataformatter/markitup/sets/markdown/style.css') }}" type="text/css" media="all" />
     <link rel="stylesheet" href="{{ asset('bundles/sonataformatter/markitup/sets/html/style.css') }}" type="text/css" media="all" />
@@ -20,4 +20,15 @@
     <script src="{{ asset('bundles/sonataformatter/markitup/sets/textile/set.js') }}" type="text/javascript"></script>
     <script type="text/javascript" src="/bundles/sonatacore/vendor/moment/min/moment-with-locales.min.js"></script>
     <script type="text/javascript" src="/bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+{% endblock %}
+
+{% block logo %}
+    {% spaceless %}
+        <a class="logo" href="{{ url('sonata_admin_dashboard') }}">
+            <img src="{{ asset('uploads/logo/logo_vertical_1.png') }}"  alt="{{ admin_pool.title }}" />
+            {% if 'single_text' == admin_pool.getOption('title_mode') or 'both' == admin_pool.getOption('title_mode') %}
+                <span>{{ admin_pool.title }}</span>
+            {% endif %}
+        </a>
+    {% endspaceless %}
 {% endblock %}
