--- a/app/Resources/SonataUserBundle/views/layout.html.twig
+++ b/app/Resources/SonataUserBundle/views/layout.html.twig
@@ -7,26 +7,13 @@
         <link href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet" />
         <link rel="icon" type="image/x-icon" href="{{ asset('uploads/logo/favicon.png') }}" />
     {% endblock %}
-    {% stylesheets filter="scssphp" output="css/app.css"
-    "assets/scss/bootstrap.scss"
-    "assets/scss/font-awesome.scss"
-    "assets/css/*.css"
-    %}
-    <link rel="stylesheet" href="{{ asset_url }}" />
-    {% endstylesheets %}
 
 </head>
 <body>
 {% block fos_user_content %}
 {% endblock fos_user_content %}
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+{% endblock %}
 
-{% javascripts filter="?jsqueeze" output="js/app.js"
-"assets/js/jquery.js"
-"assets/js/bootstrap.js"
-"assets/js/main.js"
-%}
-<script src="{{ asset_url }}"></script>
-{% endjavascripts %}
 </body>
 </html>
