--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,27 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Liên Kết úc Châu{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+                <link rel="stylesheet" href="{{ asset_url }}" />
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('uploads/logo/favicon.png') }}" />
-        {% stylesheets filter="scssphp" output="css/app.css"
-        "assets/vendor/bootstrap/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss"
-        "assets/vendor/font-awesome/font-awesome.scss"
-        "assets/css/*.css"
-        %}
-        <link rel="stylesheet" href="{{ asset_url }}" />
-        {% endstylesheets %}
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+        {% endblock %}
 
-        {% javascripts filter="?jsqueeze" output="js/app.js"
-        "assets/vendor/bootstrap/bootstrap-sass-official/vendor/assets/javascripts/jquery.js"
-        "assets/vendor/bootstrap/bootstrap-sass-official/vendor/assets/javascripts/bootstrap.js"
-        "assets/js/main.js"
-        %}
-        <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
 
     </body>
 </html>
