fix login register template

--- a/app/Resources/SonataUserBundle/views/layout.html.twig
+++ b/app/Resources/SonataUserBundle/views/layout.html.twig
@@ -10,8 +10,11 @@
 
 </head>
 <body>
-{% block fos_user_content %}
-{% endblock fos_user_content %}
+<div class="container">
+    {% block fos_user_content %}
+    {% endblock fos_user_content %}
+</div>
+
 {% block javascripts %}
 {% endblock %}
 
