--- a/app/Resources/SonataUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/SonataUserBundle/views/Registration/register_content.html.twig
@@ -1,12 +1,41 @@
+{#<div class="panel panel-success">#}
+    {#<div class="panel-heading">#}
+        {#<h2 class="panel-title">{{ 'title_user_registration'|trans({}, 'SonataUserBundle') }}</h2>#}
+    {#</div>#}
+    {#<div class="panel-body">#}
+        {#<form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register form-horizontal">#}
+            {#{{ form_widget(form) }}#}
+            {#<div class="form-actions">#}
+                {#<input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-success pull-right" />#}
+            {#</div>#}
+        {#</form>#}
+    {#</div>#}
+{#</div>#}
+
 <div class="panel panel-success">
     <div class="panel-heading">
         <h2 class="panel-title">{{ 'title_user_registration'|trans({}, 'SonataUserBundle') }}</h2>
     </div>
     <div class="panel-body">
-        <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register form-horizontal">
-            {{ form_widget(form) }}
-            <div class="form-actions">
-                <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-success pull-right" />
+        <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST">
+            <div class="form-group" id="fos_user_registration_form">
+                {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'form.email'|trans } }) }}
+                {{ form_errors(form.email) }}
+
+                {{ form_widget(form.username, { 'attr': {'class': 'form-control', 'placeholder': 'form.username'|trans } }) }}
+                {{ form_errors(form.username) }}
+
+                {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control', 'placeholder': 'form.password'|trans } }) }}
+                {{ form_errors(form.plainPassword.first) }}
+
+                {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control', 'placeholder': 'form.password_confirmation'|trans } }) }}
+                {{ form_errors(form.plainPassword.second) }}
+
+                {{ form_rest(form) }}
+
+            </div>
+            <div>
+                <input class="btn btn-lg btn-primary btn-block" type="submit" value="{{ 'registration.submit'|trans }}">
             </div>
         </form>
     </div>
