--- a/app/Resources/SonataUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/SonataUserBundle/views/Registration/register_content.html.twig
@@ -19,24 +19,48 @@
     <div class="panel-body">
         <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST">
             <div class="form-group" id="fos_user_registration_form">
-                {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'form.email'|trans } }) }}
-                {{ form_errors(form.email) }}
+                <div class="form-group">
+                    <label for="email"
+                           class="col-lg-3 col-sm-3 control-label">{{ 'form.email'|trans({}, 'FOSUserBundle') }}</label>
 
-                {{ form_widget(form.username, { 'attr': {'class': 'form-control', 'placeholder': 'form.username'|trans } }) }}
-                {{ form_errors(form.username) }}
+                    <div class="col-lg-9 col-sm-9">{{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'form.email'|trans } }) }}
+                        {{ form_errors(form.email) }}</div>
+                </div>
 
-                {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control', 'placeholder': 'form.password'|trans } }) }}
-                {{ form_errors(form.plainPassword.first) }}
+                <div class="form-group control-group">
+                    <label for="username"
+                           class="col-lg-3 col-sm-3 control-label">{{ 'form.username'|trans({}, 'FOSUserBundle') }}</label>
 
-                {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control', 'placeholder': 'form.password_confirmation'|trans } }) }}
-                {{ form_errors(form.plainPassword.second) }}
+                    <div class="col-lg-9 col-sm-9">{{ form_widget(form.username, { 'attr': {'class': 'form-control', 'placeholder': 'form.username'|trans } }) }}
+                        {{ form_errors(form.username) }}</div>
+                </div>
+
+                <div class="form-group">
+                    <label for="plainPassword"
+                           class="col-lg-3 col-sm-3 control-label">{{ 'form.password'|trans({}, 'FOSUserBundle') }}</label>
+
+                    <div class="col-lg-9 col-sm-9">{{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control', 'placeholder': 'form.password'|trans } }) }}
+                        {{ form_errors(form.plainPassword.first) }}</div>
+                </div>
+
+                <div class="form-group">
+                    <label for="password_confirmation"
+                           class="col-lg-3 col-sm-3 control-label">{{ 'form.password_confirmation'|trans({}, 'FOSUserBundle') }}</label>
+
+                    <div class="col-lg-9 col-sm-9"> {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control', 'placeholder': 'form.password_confirmation'|trans } }) }}
+                        {{ form_errors(form.plainPassword.second) }}</div>
+                </div>
 
                 {{ form_rest(form) }}
 
             </div>
-            <div>
-                <input class="btn btn-lg btn-primary btn-block" type="submit" value="{{ 'registration.submit'|trans }}">
+            <div class="form-actions">
+                <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}"
+                       class="btn btn-success pull-left"/>
             </div>
+            {#<div>#}
+                {#<input class="btn btn-lg btn-primary btn-block" type="submit" value="{{ 'registration.submit'|trans }}">#}
+            {#</div>#}
         </form>
     </div>
 </div>
