--- a/app/Resources/SonataUserBundle/views/Security/base_login.html.twig
+++ b/app/Resources/SonataUserBundle/views/Security/base_login.html.twig
@@ -13,7 +13,10 @@ file that was distributed with this source code.
 
 {% block fos_user_content %}
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
+            {% render controller("FOSUserBundle:Registration:register") %}
+        </div>
+        <div class="col-md-12">
             <div class="panel panel-info">
 
                 <div class="panel-heading">
@@ -76,8 +79,12 @@ file that was distributed with this source code.
             </div>
 
         </div>
-        <div class="col-md-6">
-            {% render controller("FOSUserBundle:Registration:register") %}
-        </div>
+
     </div>
 {% endblock fos_user_content %}
+{% block javascripts %}
+    <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('assets/vendor/jqueryui/ui/jquery-ui.js') }}"></script>
+
+{% endblock %}
