--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,6 +11,9 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+            <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
+            <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('assets/vendor/jqueryui/ui/jquery-ui.js') }}"></script>
         {% endblock %}
     </body>
 </html>
